Fixes #104 - Creating a project with a long name breaks the UI

--- a/web/static/css/_ncd.scss
+++ b/web/static/css/_ncd.scss
@@ -117,6 +117,7 @@ header {
 
   a.page-title {
     font-size: 20px;
+    max-width: 95%;
     display: inline-block;
     i {
       @extend .grey-text, .lighten-2;
